Fixed issue with #jumboTime overlap.

--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ body {
 #jumboTime {
   position: absolute;
   padding: 8px;
-  top: -3px;
+  top: -8px;
   left: -3px;
   color: #06aed5;
   background-color: white;
